Modified script placement and font fallbacks

--- a/index.css
+++ b/index.css
@@ -29,7 +29,7 @@
 }
 
 body {
-  font-family:'Timeburner', sans-serif;
+  font-family:'Timeburner', Arial, Helvetica, sans-serif;
   background-color: #fffff2;
 
   margin: 0;
