--- a/index.css
+++ b/index.css
@@ -29,7 +29,7 @@
 }
 
 body {
-  font-family:'Timeburner', Arial, Helvetica, sans-serif;
+  font-family:'Timeburner', 'Courier New', Courier, monospace;
   background-color: #fffff2;
 
   margin: 0;
@@ -71,7 +71,7 @@ body {
 }
 
 .navbar .openNav {
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: 'Courier New', Courier, monospace;
   display: none; /* Hide the 'hamburger' icon by default */
 }
 
@@ -210,7 +210,7 @@ body {
 }
 
 .homeSection h1 {
-  font-family:'Timeburner-Bold', Arial, Helvetica, sans-serif;
+  font-family:'Timeburner-Bold', 'Courier New', Courier, monospace;
   display: inline-block;
   overflow: hidden;
   white-space: nowrap;
@@ -317,7 +317,7 @@ body {
 }
 
 .aboutSection {
-  font-family:'Timeburner', Arial, Helvetica, sans-serif;
+  font-family:'Timeburner', 'Courier New', Courier, monospace;
   overflow: wrap;
 
   position: relative;
@@ -326,7 +326,7 @@ body {
 }
 
 .aboutSection h1 {
-  font-family:'Timeburner-Bold', Arial, Helvetica, sans-serif;
+  font-family:'Timeburner-Bold', 'Courier New', Courier, monospace;
   display: inline-block;
   overflow: hidden;
   white-space: nowrap;
@@ -361,7 +361,7 @@ body {
 }
 
 .experienceSection {
-  font-family: 'Timeburner';
+  font-family: 'Timeburner', 'Courier New', Courier, monospace;
   overflow: wrap;
 
   position: relative;
@@ -375,7 +375,7 @@ body {
 }
 
 .experienceSection h1 {
-  font-family:'Timeburner-Bold', Arial, Helvetica, sans-serif;
+  font-family:'Timeburner-Bold', 'Courier New', Courier, monospace;
   display: inline-block;
   overflow: hidden;
   white-space: nowrap;
@@ -412,7 +412,7 @@ body {
 }
 
 .experienceSection h3 {
-  font-family:'Timeburner-Bold', Arial, Helvetica, sans-serif;
+  font-family:'Timeburner-Bold', 'Courier New', Courier, monospace;
   display: block;
   overflow: hidden;
   white-space: nowrap;
@@ -422,7 +422,7 @@ body {
 }
 
 .experienceSection h4 {
-  font-family: 'Timeburner', Helvetica, Arial, sans-serif;
+  font-family: 'Timeburner', 'Courier New', Courier, monospace;
   display: block;
   overflow: hidden;
   white-space: nowrap;
@@ -432,7 +432,7 @@ body {
 }
 
 .experienceSection h5 {
-  font-family: 'Timeburner', Helvetica, Arial, sans-serif;
+  font-family: 'Timeburner', 'Courier New', Courier, monospace;
   display: block;
   overflow: hidden;
   white-space: nowrap;
@@ -442,7 +442,7 @@ body {
 }
 
 .projectsSection {
-  font-family: 'Timeburner';
+  font-family: 'Timeburner', 'Courier New', Courier, monospace;
   overflow: wrap;
 
   position: relative;
@@ -456,7 +456,7 @@ body {
 }
 
 .projectsSection h1 {
-  font-family:'Timeburner-Bold', Arial, Helvetica, sans-serif;
+  font-family:'Timeburner-Bold', 'Courier New', Courier, monospace;
   display: inline-block;
   overflow: hidden;
   white-space: nowrap;
@@ -464,7 +464,7 @@ body {
 }
 
 .projectsSection h3 {
-  font-family:'Timeburner-Bold', Arial, Helvetica, sans-serif;
+  font-family:'Timeburner-Bold', 'Courier New', Courier, monospace;
   display: block;
   overflow: hidden;
   white-space: wrap;
@@ -474,7 +474,7 @@ body {
 }
 
 .projectsSection h4 {
-  font-family: 'Timeburner';
+  font-family: 'Timeburner', 'Courier New', Courier, monospace;
   display: block;
   overflow: hidden;
   white-space: nowrap;
@@ -484,7 +484,7 @@ body {
 }
 
 .projectsSection h5 {
-  font-family: 'Timeburner';
+  font-family: 'Timeburner', 'Courier New', Courier, monospace;
   display: block;
   overflow: hidden;
   white-space: nowrap;
@@ -552,7 +552,7 @@ body {
 }
 
 .contactSection {
-  font-family: 'Timeburner';
+  font-family: 'Timeburner', 'Courier New', Courier, monospace;
   overflow: wrap;
 
   position: relative;
@@ -561,14 +561,14 @@ body {
 }
 
 .contactSection h1 {
-  font-family:'Timeburner-Bold', Arial, Helvetica, sans-serif;
+  font-family:'Timeburner-Bold', 'Courier New', Courier, monospace;
   display: inline-block;
   overflow: hidden;
   width: auto;
 }
 
 .contactSection h3 {
-  font-family:'Timeburner-Bold', Arial, Helvetica, sans-serif;
+  font-family:'Timeburner-Bold', 'Courier New', Courier, monospace;
   display: block;
   overflow: hidden;
   width: auto;
@@ -577,7 +577,7 @@ body {
 }
 
 .contactSection h4 {
-  font-family: 'Timeburner';
+  font-family: 'Timeburner', 'Courier New', Courier, monospace;
   display: block;
   overflow: hidden;
   width: auto;
@@ -586,7 +586,7 @@ body {
 }
 
 .contactSection h5 {
-  font-family: 'Timeburner', Helvetica, Arial, sans-serif;
+  font-family: 'Timeburner', 'Courier New', Courier, monospace;
   display: block;
   overflow: hidden;
   width: auto;
